--- a/app/src/main/res/layout/fragment_organizations.xml
+++ b/app/src/main/res/layout/fragment_organizations.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".organization_feature.presenter.organizations.OrganizationsFragment">
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lvOrganizations"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
