--- a/app/src/main/res/layout/item_card_organization.xml
+++ b/app/src/main/res/layout/item_card_organization.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="1dp"
@@ -63,7 +62,6 @@
             android:text="DATE"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtFact" />
-
 
         <TextView
             android:id="@+id/txtId"
@@ -149,16 +147,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtUrl" />
 
-
         <androidx.constraintlayout.widget.Group
             android:id="@+id/expandableContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"
+            android:visibility="gone"
             app:constraint_referenced_ids="dividerId,txtSlug,txtId,txtDateInsert,txtDataset,txtColumns,txtResource,txtUrl,txtOperations"/>
-
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
