--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,27 +10,17 @@
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp">
 
-    <TextView
-        android:id="@+id/txtTitleLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="HELLO WORLD"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardInputs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="1dp"
         app:contentPadding="16dp"
-        android:layout_margin="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineVertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTitleLogin"
         app:strokeWidth="0dp">
 
         <LinearLayout
@@ -74,17 +64,44 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <CheckBox
+                android:id="@+id/cbFingerprint"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Use fingerprint on next login" />
+
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineVertical"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.5"
+        android:orientation="horizontal" />
+
+    <TextView
+        android:id="@+id/txtTitleLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOGIN"
+        android:textSize="18dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardInputs"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign-In"
+        app:icon="@drawable/ic_login_24"
+        style="@style/Widget.Material3.Button.ElevatedButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardInputs" />
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/guidelineVertical" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardGoogleRegister"
@@ -93,6 +110,7 @@
         app:cardCornerRadius="5dp"
         app:cardElevation="1dp"
         app:contentPadding="16dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/button"
         app:strokeWidth="0dp">
 
