--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,8 +53,8 @@
                 android:layout_marginTop="16dp"
                 android:ems="10"
                 android:hint="Password"
+                app:endIconMode="password_toggle"
                 android:textSize="14sp">
-
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign-In"
@@ -103,6 +103,17 @@
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/guidelineVertical" />
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/guidelineVertical"/>
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardGoogleRegister"
         android:layout_width="match_parent"
@@ -111,7 +122,7 @@
         app:cardElevation="1dp"
         app:contentPadding="16dp"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
         app:strokeWidth="0dp">
 
         <LinearLayout
@@ -133,5 +144,14 @@
 
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
+
+    <TextView
+        android:id="@+id/txtRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Have not account?"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/cardGoogleRegister" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
